feat: JVM 메모리 시리즈 신설 + jvm-and-gc 슬림화
- theory/JVM-Memory 서브카테고리 추가 (theory.json)
- jvm-and-gc.md 1853→575줄, JVM 아키텍처 개론으로 재구성
  - Heap/GC 디테일은 es-memory 시리즈로 위임
  - JDK 9+ Platform classloader 반영, Tiered Compilation 표 정리
- es-memory 01~05편 신규 (Heap/GC/Off-heap/Page Cache/Elasticsearch)
- 6편 전체에 시리즈 네비게이션 박스 상호 링크